# annict-profile-card

./: .dockerignore  Cargo.toml  Dockerfile  README.md  sailfish.toml  sailfish.yml
.github/workflows/: build-image.yml  check-rust.yml  check.yml  docker.yml
src/: GetUserQuery.graphql  config.rs  main.rs  schema.graphql
src/api/: common.rs  error.rs  index.rs  mod.rs  watching.graphql  watching.rs
