[package]
name = "annict-profile-card"
# description = ""
version = "0.0.1"
authors = ["Nep <spica@starry.blue>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-cors = "0.5"
graphql_client = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sailfish = "0.3"
futures = "0.3"
thiserror = "1.0"
base64 = "0.13"
openssl-probe = "0.1"
envy = "0.4"
env_logger = "0.9"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.5"
