[package]
name = "annict-profile-card"
version = "0.0.1"
authors = ["Nep <spica@starry.blue>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
actix-web = { version = "4.0.1", features = ["openssl"] }
awc = "3.0.0"
actix-cors = "0.6.1"
graphql_client = "0.10.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sailfish = "0.4.0"
futures = "0.3.21"
thiserror = "1.0.31"
base64 = "0.13.0"
openssl-probe = "0.1.5"
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4.19"
chrono-tz = "0.6.1"
