[package]
name = "annict-profile-card"
# description = ""
version = "0.0.1"
authors = ["Nep <spica@starry.blue>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features = ["openssl"] }
awc = "3.0.0"
actix-cors = "0.6.2"
graphql_client = "0.11.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sailfish = "0.4.0"
futures = "0.3.21"
thiserror = "1.0.32"
base64 = "0.13.0"
openssl-probe = "0.1.5"
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4.24"
chrono-tz = "0.6.3"
